@@ -28,12 +28,66 @@ from MDAnalysis.analysis.lineardensity import LinearDensity
 from numpy.testing import assert_almost_equal
 
 
-def test_serial():
+
+def test_grouping_atoms():
+    """For testing the case of grouping='atoms'"""
     universe = mda.Universe(waterPSF, waterDCD)
     sel_string = 'all'
     selection = universe.select_atoms(sel_string)
 
+    ld = LinearDensity(selection, grouping="atoms", binsize=5).run()
+
+    expected_masses = np.array([15.9994, 1.008, 1.008, 15.9994, 1.008, 1.008,
+                                15.9994, 1.008, 1.008, 15.9994, 1.008, 1.008,
+                                15.9994, 1.008, 1.008])
+
+    expected_charges = np.array([-0.834, 0.417, 0.417, -0.834, 0.417,
+                                 0.417, -0.834, 0.417, 0.417, -0.834,
+                                 0.417, 0.417, -0.834, 0.417, 0.417])
+
     xpos = np.array([0., 0., 0., 0.0072334, 0.00473299, 0.,
                           0., 0., 0., 0.])
-    ld = LinearDensity(selection, binsize=5).run()
-    assert_almost_equal(xpos, ld.results['x']['pos'])
+
+    assert_almost_equal(ld.masses, expected_masses)
+    assert_almost_equal(ld.charges, expected_charges)
+    assert_almost_equal(ld.results['x']['pos'], xpos)
+
+def test_grouping_residues():
+    """For testing the case of grouping='residues'"""
+    universe = mda.Universe(waterPSF, waterDCD)
+    sel_string = 'all'
+    selection = universe.select_atoms(sel_string)
+    ld = LinearDensity(selection, grouping="residues", binsize=5).run()
+
+    expected_masses = np.array([18.0154, 18.0154, 18.0154, 18.0154, 18.0154])
+    expected_charges = np.array([0, 0, 0, 0, 0])
+
+    assert_almost_equal(ld.masses, expected_masses)
+    assert_almost_equal(ld.charges, expected_charges)
+
+
+def test_grouping_segments():
+    """For testing the case of grouping='segments'"""
+    universe = mda.Universe(waterPSF, waterDCD)
+    sel_string = 'all'
+    selection = universe.select_atoms(sel_string)
+    ld = LinearDensity(selection, grouping="segments", binsize=5).run()
+
+    expected_masses = np.array([90.0770])
+    expected_charges = np.array([0])
+    assert_almost_equal(ld.masses, expected_masses)
+    assert_almost_equal(ld.charges, expected_charges)
+
+def test_grouping_fragments():
+    """For testing the case of grouping='fragments'"""
+    universe = mda.Universe(waterPSF, waterDCD)
+    sel_string = 'all'
+    selection = universe.select_atoms(sel_string)
+    ld = LinearDensity(selection, grouping="fragments", binsize=5).run()
+
+    expected_masses = np.array([18.0154, 18.0154, 18.0154, 18.0154, 18.0154])
+    expected_charges = np.array([0, 0, 0, 0, 0])
+
+    assert_almost_equal(ld.masses, expected_masses)
+    assert_almost_equal(ld.charges, expected_charges)
+
